Added href links to About instead of visible URLs

--- a/about/index.html
+++ b/about/index.html
@@ -164,7 +164,7 @@
 
     
     <p>I write and <a href="https://www.youtube.com/channel/UCegYuFzCpuV2ZkMswZP5TgQ">record videos</a> about Leadership, Management and related books.</p>
-<p>Over the years I've written in various places including some company blogs that have since disappeared. Some of my more recent articles are on Medium (<a href="https://yagiz.medium.com">https://yagiz.medium.com</a>) or on my current company's blog (<a href="https://pex.com/blog)">https://pex.com/blog)</a>. I'm moving them here one by one.</p>
+<p>Over the years I've written in various places including some company blogs that have since disappeared. Some of my more recent articles are on <a href="https://yagiz.medium.com">Medium</a> or on <a href="https://pex.com/blog">my current company's blog</a>. I'm moving them here one by one.</p>
 <p>I'm also a beekeeper 🐝. I enjoy riding my mountain bike 🚵‍♂️, playing guitar 🎸 and creative activities like wood carving and pyrography.</p>
 <p>I live in beautiful, sunny Colorado. (I took the following shot in Boulder).</p>
 <p><img src="/images/flatirons.jpg" alt="Boulder, CO - (c) Yağız Erkan"></p>
