--- a/about/index.html
+++ b/about/index.html
@@ -80,6 +80,9 @@
   <div class="nav_parent">
     <a href="https://yazerk.com/posts" class="nav_item">Posts </a>
   </div>
+  <div class="nav_parent">
+    <a href="https://yazerk.com/books/" class="nav_item">Books </a>
+  </div>
   <div class="nav_parent nav_active">
     <a href="https://yazerk.com/about/" class="nav_item">About </a>
   </div>
