--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <div class="excerpt">
     <div class="excerpt_header">
       <h3 class="post_link">
-        <a href="https://yazerk.com/posts/2021-12-27-new-office-chair/">New Year New Chair</a>
+        <a href="https://yazerk.com/posts/2021-12-27-new-office-chair/">New Year, New Chair</a>
       </h3>
       <div class="post_meta">
   
@@ -383,7 +383,7 @@ Not that you have to practice scrum to have stand-ups, but here is how the Scrum
     <h2 class="mt-4">Featured Posts</h2>
     <ul>
       <li>
-        <a href="https://yazerk.com/posts/2021-12-27-new-office-chair/" class="nav-link">New Year New Chair</a>
+        <a href="https://yazerk.com/posts/2021-12-27-new-office-chair/" class="nav-link">New Year, New Chair</a>
       </li>
       <li>
         <a href="https://yazerk.com/posts/2021-09-18-new-youtube-channel/" class="nav-link">The Leadership Journey - My New YouTube Channel</a>
@@ -401,7 +401,7 @@ Not that you have to practice scrum to have stand-ups, but here is how the Scrum
     <h2 class="mt-4">Recent Posts</h2>
     <ul class="flex-column">
       <li>
-        <a href="https://yazerk.com/posts/2021-12-27-new-office-chair/" class="nav-link">New Year New Chair</a>
+        <a href="https://yazerk.com/posts/2021-12-27-new-office-chair/" class="nav-link">New Year, New Chair</a>
       </li>
       <li>
         <a href="https://yazerk.com/posts/2021-09-18-new-youtube-channel/" class="nav-link">The Leadership Journey - My New YouTube Channel</a>
