Added two new books to the list: Inspired and Factfulness

--- a/books/index.html
+++ b/books/index.html
@@ -137,7 +137,7 @@
   <use xlink:href="#calendar"></use>
 </svg>
     <span class="post_date">
-      Oct 12, 2021</span>
+      Dec 27, 2021</span>
 </div>
 
     
@@ -176,6 +176,14 @@
 </tr>
 </thead>
 <tbody>
+<tr>
+<td><a href="https://amzn.to/3sxJr3s"><img src="/images/books/factfulness.jpg" alt="Factfulness"></a></td>
+<td><img src="/images/youtube-logo-32x32.png" alt=""> <a href="https://www.youtube.com/watch?v=L_H8tKIJJ-k">My review &amp; summary video on YouTube</a><br />When asked simple questions about global trends—what percentage of the world’s population live in poverty; why the world’s population is increasing; how many girls finish school—we systematically get the answers wrong. So wrong that a chimpanzee choosing answers at random will consistently outguess teachers, journalists, Nobel laureates, and investment bankers.<br /><br />In Factfulness, Professor of International Health and global TED phenomenon Hans Rosling, together with his two long-time collaborators, Anna and Ola, offers a radical new explanation of why this happens. They reveal the ten instincts that distort our perspective—from our tendency to divide the world into two camps (usually some version of us and them) to the way we consume media (where fear rules) to how we perceive progress (believing that most things are getting worse).</td>
+</tr>
+<tr>
+<td><a href="https://amzn.to/3lBFyoT"><img src="/images/books/inspired.jpg" alt="Inspired"></a></td>
+<td><img src="/images/youtube-logo-32x32.png" alt=""> <a href="https://www.youtube.com/watch?v=d0YXYVsc8dg">My review &amp; summary video on YouTube</a><br />In Inspired, technology product management thought leader Marty Cagan provides listeners with a master class in how to structure and staff a vibrant and successful product organization and how to discover and deliver technology products that your customers will love - and that will work for your business.<br /><br />With sections on assembling the right people and skillsets, discovering the right product, embracing an effective yet lightweight process, and creating a strong product culture, listeners can take the information they learn and immediately leverage it within their own organizations - dramatically improving their own product efforts. Whether you're an early stage start-up working to get to product/market fit or a growth-stage company working to scale your product organization or a large, long-established company trying to regain your ability to consistently deliver new value for your customers, Inspired will take you and your product organization to a new level of customer engagement, consistent innovation, and business success.</td>
+</tr>
 <tr>
 <td><a href="https://amzn.to/3bYOYq6"><img src="/images/books/the-choaching-habit.jpg" alt="The Coaching Habit"></a></td>
 <td>In Michael Bungay Stanier's The Coaching Habit, coaching becomes a regular, informal part of your day so managers and their teams can work less hard and have more impact.<br /><br />Drawing on years of experience training more than 10,000 busy managers from around the globe in practical, everyday coaching skills, Bungay Stanier reveals how to unlock your peoples' potential. He unpacks seven essential coaching questions to demonstrate how--by saying less and asking more--you can develop coaching methods that produce great results.</td>
