Modified _index.html to contain the correct author and description

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <meta property="og:locale" content="en" />
 
 <meta property="og:type" content="website">
-<meta name="description" content="A theme based on VMware&#39;s Clarity Design System for publishing technical blogs with Hugo.">
+<meta name="description" content="My musings and reflections on leadership, management and software product development.">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:creator" content="@yagiz">
 <meta name="twitter:title" content="" />
 <meta property="og:url" content="https://yazerk.com/" />
 <meta property="og:title" content="" />
-<meta property="og:description" content="A theme based on VMware&#39;s Clarity Design System for publishing technical blogs with Hugo." />
+<meta property="og:description" content="My musings and reflections on leadership, management and software product development." />
 <meta property="og:image" content="https://yazerk.com/images/thumbnail.png" />
 <link rel="apple-touch-icon" sizes="180x180" href='https://yazerk.com/icons/apple-touch-icon.png'>
 <link rel="icon" type="image/png" sizes="32x32" href='https://yazerk.com/icons/favicon-32x32.png'>
